<resources>
    <string name="app_name">Presence</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="title_activity_beacon_detect">BeaconDetectActivity</string>
    <string name="title_activity_proxevents_list">ProxeventsListActivity</string>
    <string name="title_activity_dispatching">Presence</string>
    <string name="title_activity_welcome">Presence</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Make your Presence felt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_nearby_proxevents">Nearby Proxevents</string>
    <string name="title_activity_main_nav_drawer">Presence</string>
    <string name="title_activity_nav_drawer_adapter">NavDrawerAdapter</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="facebook_app_id">768539289922273</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="own_proxivents">Your own Proxivents</string>
    <string name="joined_proxivents">Your Participations</string>
    <string name="nearby_proxivents">Nearby Proxivents</string>
    <string name="text_multi_line">The quick brown fox\njumps over the lazy dog\nand crawl under the truck.</string>
    <string name="sample_proxivent_title">Welcome to the Presence Proxivent!</string>
    <string name="sample_proxivent_description">This is a sample proxivent(short for proximity event).\nGo ahead! Click the \'+\' button to create a new one yourself.\nThen press the \"START\" button to invite people nearby to join your proxivent!\nEnjoy!</string>


    <string-array name="nav_drawer_list_items">
        <item>Scan for Proxivents</item>
        <item>Your Proxivents</item>
        <item>Joined/Others</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_drawer_list_images">
        <item>ic_search_white_24dp</item>
        <item>ic_bluetooth_searching_white_24dp</item>
        <item>ic_event_white_24dp</item>
        <item>ic_settings_white_24dp</item>
        <item>ic_arrow_back_white_24dp</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_proxivent_details">ProxiventDetailsActivity</string>
    <string name="title_activity_proxivent">ProxiventActivity</string>
    <string name="title_activity_proxivent_edit">ProxiventEditActivity</string>
    <string name="title_activity_nearby_proxivent_details">NearbyProxiventDetailsActivity</string>
    <string name="title_activity_proxivent_participants">ProxiventParticipantsActivity</string>
</resources>
